# oaas-sdk-py

./: LICENSE  Pipfile  README.adoc  README.md  justfile  pyproject.toml
src/oaas-sdk-py/: __init__.py
src/oaas_sdk_py/: __init__.py  model.py
